5.4/_sources/module/grdblend.rst.txt
.. index:: !grdblend

grdblend
========

:官方文档: :doc:`gmt:grdblend`
:简介: 将多个部分重叠的网格文件合并成一个网格文件

该模块会读取多个网格文件以及一个合并参数文件，并将多个网格文件合并成一个网格
文件。

必选选项
--------

``-G<outgrid>``
    输出的网格文件名

.. include:: explain_-I.rst_

``-R<west>/<east>/<south>/<north>``
    数据区域范围

可选选项
--------

``<grid1> <grid2>``
    要合并的网格文件列表

``<blendfile>``
    文件中包含了要合并的网格文件的文件名列表，其格式为::

        网格文件名（必须）  -R选项（可选）  相对权重（可选）

    - 在考虑权重的情况下， ``-R`` 范围外的部分会给零权重，范围内的部分则会使用
      指定的相对权重，在边界处会加上2D余弦taper权重。
    - 若相对权重为负值，则整个反过来，即范围内的会给零权重，范围外的会给权重的绝对值。
    - -R选项可以取值 ``-`` ，此时会直接使用网格文件的数据范围。
    - 若未指定权重，则默认权重为1
    - 也可以不指定 ``<blendfile>`` ，只是将所有网格文件名列在命令行中，此时会
      使用网格数据的真实范围，且所有网格文件的权重都是1.

``-C[f|l|o|u]``
    在合并时，若多个网格出现重叠，则忽略权重并按照下面的规则设置重叠区域的值：

    - ``-Cf`` 将第一个访问该节点的网格数据作为该节点的值
    - ``-Co`` 将最后一个访问该节点的网格数据作为该节点的值
    - ``-Cl`` 将所有网格文件在该节点的值的最小值作为该节点的值
    - ``-Cu`` 将所有网格文件在该节点的值的最大值作为该节点的值

``-N<nodata>``
    将无数据的节点的值设置为 ``<nodata>`` ，默认值为NaN

``-Q``
    创建一个无头段的二进制网格文件，使得其可以被 :doc:`grdraster` 所用。

``-W[z]``
    不合并数据，仅输出每个节点所使用的权重。 ``-Wz`` 表示输出 Z值乘以权重的和。

``-Z<scale>``
    在输出前先将数据乘以比例因子 ``<scale>`` ，默认值为 1

示例
----

假设要合并几个网格文件，则可以设置 blendfile 的内容为::

    piece_1.nc -R0/30/-90/90 1
    piece_2.nc -R25/50/-90/90 1.5
    piece_3.nc -R45/80/-90/90 0.9
    piece_4.nc -R80/160/-90/90 1

执行如下命令即可实现数据合并::

    gmt grdblend blend.job -Gblend.nc -R0/160/-90/90 -I1m/1m -V

将所有网格文件 ``MB_*.nc`` 以相同权重合并::

    gmt grdblend MB_*.nc -Gblend.nc -R0/360/-90/90 -I1m/1m -V
